GearsetPOC/force-app/main/default/objects/CS_Letter__c/CS_Letter__c.object-meta.xml
<CustomObject>
    <description>Letter generator for delay/cancellation confirmation and additional payment receipts</description>
    <label>CS Letter</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>CS Letter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CS Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>