GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Additional_Amount_Charged__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amount_Charged__c</fullName>
    <label>Additional Amount Charged</label>
    <length>20</length>
    <type>Text</type>
</CustomField>