GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Cancelled_Train_Number__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Train_Number__c</fullName>
    <label>Cancelled Train Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>