GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date__c</fullName>
    <label>Check-In Date</label>
    <type>Date</type>
</CustomField>