GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Date_Of_Cancelled_Train__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Cancelled_Train__c</fullName>
    <label>Date Of Cancelled Train</label>
    <length>100</length>
    <type>Text</type>
</CustomField>