GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Date_of_Delay__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Delay__c</fullName>
    <label>Date of Delay</label>
    <length>100</length>
    <type>Text</type>
</CustomField>