GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Delay_Duration_Mins__c.field-meta.xml
<CustomField>
    <fullName>Delay_Duration_Mins__c</fullName>
    <label>Delay Duration (Mins)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>