GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Delayed_Train_Number__c.field-meta.xml
<CustomField>
    <fullName>Delayed_Train_Number__c</fullName>
    <label>Delayed Train Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>