GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Full_Hotel_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Hotel_Address__c</fullName>
    <label>Full Hotel Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>