GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Guest_Names__c.field-meta.xml
<CustomField>
    <fullName>Guest_Names__c</fullName>
    <label>Guest Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>