GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <label>Hotel Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>