GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Last_4_Digits_Of_Payment_Card__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits_Of_Payment_Card__c</fullName>
    <label>Last 4 Digits Of Payment Card</label>
    <length>4</length>
    <type>Text</type>
</CustomField>