GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Original_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Booking_Date__c</fullName>
    <formula>MID(Outward_Ticket__r.Booking_DateTime__c,1,10 )</formula>
    <label>Original Booking Date</label>
    <type>Text</type>
</CustomField>