GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Original_Total_Price_Paid__c.field-meta.xml
<CustomField>
    <fullName>Original_Total_Price_Paid__c</fullName>
    <label>Original Total Price Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>