GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Outward_Class_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Outward_Class_Of_Service__c</fullName>
    <formula>TEXT(Outward_Ticket__r.Class_of_Service__c )</formula>
    <label>Outward Class Of Service</label>
    <type>Text</type>
</CustomField>