GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Outward_Date_Time_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Outward_Date_Time_of_Travel__c</fullName>
    <formula>Outward_Ticket__r.Travel_DateTime__c</formula>
    <label>Outward Date &amp; Time of Travel</label>
    <type>Text</type>
</CustomField>