GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Outward_Journey__c.field-meta.xml
<CustomField>
    <fullName>Outward_Journey__c</fullName>
    <formula>Outward_Ticket__r.Origin__c +&quot; &quot;+&quot;To&quot;+&quot; &quot;+ Outward_Ticket__r.Destination__c</formula>
    <label>Outward Journey</label>
    <type>Text</type>
</CustomField>