GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Outward_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Outward_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please enter ANY outbound ticket number related to this booking</inlineHelpText>
    <label>Outward Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>CS Letters</relationshipLabel>
    <relationshipName>CS_Letters</relationshipName>
    <type>Lookup</type>
</CustomField>