GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Passenger_Names__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Names__c</fullName>
    <label>Passenger Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>