GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Payment_Date_Of_Additional_Fee__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_Of_Additional_Fee__c</fullName>
    <label>Payment Date Of Additional Fee</label>
    <type>Date</type>
</CustomField>