GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <formula>Outward_Ticket__r.PNR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PNR</label>
    <type>Text</type>
</CustomField>