GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Reason_For_Additional_Charge__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Additional_Charge__c</fullName>
    <label>Reason For Additional Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>échange</fullName>
            </value>
            <value>
                <fullName>surclassement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>