GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CS Letters</relationshipLabel>
    <relationshipName>CS_Letters</relationshipName>
    <type>Lookup</type>
</CustomField>