GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Requested_Language__c.field-meta.xml
<CustomField>
    <fullName>Requested_Language__c</fullName>
    <label>Requested Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>