GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Return_Class_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Return_Class_Of_Service__c</fullName>
    <formula>Text(Return_Ticket__r.Class_of_Service__c)</formula>
    <label>Return Class Of Service</label>
    <type>Text</type>
</CustomField>