GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Return_Date_Time_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Return_Date_Time_of_Travel__c</fullName>
    <formula>Return_Ticket__r.Travel_DateTime__c</formula>
    <label>Return Date &amp; Time of Travel</label>
    <type>Text</type>
</CustomField>