GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Return_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Return_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please enter ANY Inbound ticket number related to this booking</inlineHelpText>
    <label>Return Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>CS Letters (Inbound Ticket)</relationshipLabel>
    <relationshipName>CS_Letters1</relationshipName>
    <type>Lookup</type>
</CustomField>