GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Return_Train_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_Train_Number__c</fullName>
    <formula>MID(  Return_Ticket__r.Train__r.Train_Number__c , 2, 5)</formula>
    <label>Return Train Number</label>
    <type>Text</type>
</CustomField>