GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Total_Number_of_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Passengers__c</fullName>
    <label>Total Number of Passengers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>