GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Type_of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Cancellation__c</fullName>
    <label>Type of Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disruption/Rescheduled Cancellation</fullName>
            </value>
            <value>
                <fullName>Customer Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>