GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Type_of_Package_Standalone_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Package_Standalone_Confirmation__c</fullName>
    <label>Type of Package/Standalone Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistance Booking Confirmation</fullName>
            </value>
            <value>
                <fullName>Booking Exchange</fullName>
            </value>
            <value>
                <fullName>Booking Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>