GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Type_of_Rooms_Booked__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Rooms_Booked__c</fullName>
    <inlineHelpText>Full board, half board, etc.
If reservation is room only, please enter &quot;Room Only&quot;</inlineHelpText>
    <label>Type of Rooms Booked</label>
    <length>200</length>
    <type>Text</type>
</CustomField>