GearsetPOC/force-app/main/default/objects/CS_Letter__c/fields/Which_Leg_Of_The_Journey_Was_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Which_Leg_Of_The_Journey_Was_Delayed__c</fullName>
    <label>Which Leg Of The Journey Was Delayed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outward</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>