GearsetPOC/force-app/main/default/objects/CS_Letter__c/recordTypes/Additional_Payment_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>Additional_Payment_Confirmation</fullName>
    <active>true</active>
    <description>Used to create an additional payment confirmation (only to be used for situations where an updated confirmation cannot be sent from Opera)</description>
    <label>Additional Payment Confirmation</label>
</RecordType>