GearsetPOC/force-app/main/default/objects/CS_Letter__c/recordTypes/Cancellation_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>Cancellation_Confirmation</fullName>
    <active>true</active>
    <description>Used to create a written confirmation that a train/booking has been cancelled (Both a Eurostar cancellation or a customer cancellation)</description>
    <label>Cancellation Confirmation</label>
</RecordType>