GearsetPOC/force-app/main/default/objects/CS_Letter__c/recordTypes/Delay_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>Delay_Confirmation</fullName>
    <active>true</active>
    <description>Used to create a written confirmation that a train/booking has been delayed</description>
    <label>Delay Confirmation</label>
</RecordType>