GearsetPOC/force-app/main/default/objects/CS_Letter__c/recordTypes/Dynamic_Package_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>Dynamic_Package_Confirmation</fullName>
    <active>true</active>
    <label>Dynamic Package Confirmation</label>
</RecordType>