GearsetPOC/force-app/main/default/objects/CS_Letter__c/recordTypes/VAT_Receipt_UK_France.recordType-meta.xml
<RecordType>
    <fullName>VAT_Receipt_UK_France</fullName>
    <active>true</active>
    <description>Used to create a written confirmation of the VAT charged for a journey that only involves the UK &amp; France</description>
    <label>VAT Receipt (UK/France)</label>
</RecordType>