GearsetPOC/force-app/main/default/objects/CS_Letter__c/validationRules/Dutch_Language_Additional_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Dutch_Language_Additional_Payment</fullName>
    <active>true</active>
    <description>Blocks the Dutch Language option from Additional Payment form</description>
    <errorConditionFormula>RecordTypeId = &quot;012260000008zg1&quot;
&amp;&amp;
  ISPICKVAL(Requested_Language__c,&quot;Dutch&quot;)</errorConditionFormula>
    <errorMessage>There are no Dutch Templates for Additional Payment Confirmations, please send this confirmation in either English or French</errorMessage>
</ValidationRule>