GearsetPOC/force-app/main/default/objects/CS_Letter__c/validationRules/French_And_Dutch_VAT_Receipt.validationRule-meta.xml
<ValidationRule>
    <fullName>French_And_Dutch_VAT_Receipt</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(RecordType.Name,&quot;VAT&quot;)
&amp;&amp;
NOT(ISPICkVAL(Requested_Language__c,&quot;English&quot;))</errorConditionFormula>
    <errorMessage>There are currently no French or Dutch templates for this letter, please send this confirmation in English</errorMessage>
</ValidationRule>